k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: practice

spec:
  clusterIP: None

  selector:
    app: mongo

  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: practice

spec:
  serviceName: mongo

  replicas: 3

  selector:
    matchLabels:
      app: mongo

  template:

    metadata:
      labels:
        app: mongo

    spec:

      containers:

        - name: mongo
          image: mongo:8.0

          command:
            - mongod

          args:
            - "--bind_ip_all"
            - "--replSet"
            - "rs0"

          ports:
            - containerPort: 27017

          volumeMounts:

            - name: mongo-data
              mountPath: /data/db


  volumeClaimTemplates:

    - metadata:
        name: mongo-data

      spec:

        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
